--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,12 @@
   "action": { "default_popup": "index.html" },
   "content_scripts": [
     {
-      "js": ["src/scripts/content.tsx"],
+      "js": ["src/scripts/helloWorld.tsx"],
       "matches": ["https://www.google.com/*"]
+    },
+    {
+      "js": ["src/scripts/wld.tsx"],
+      "matches": ["https://lichess.org/*"]
     }
   ]
 }
